# Time-Tracking

./: Cargo.toml  Output.csv  README.md  output.csv
Data/: Clockify.csv
src/: main.rs  time_entry.rs
