[package]
name = "time_tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = { version = "4.3.0", features = ["derive"] }
time = "0.3.21"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
csv = "1.2.1"
serde = "1.0.163"
